<resources>
    <string name="app_name">Event Scheduler</string>
    <string name="add">ADD</string>
    <string name="event_title">Event Title:</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="_00_00_00">00-00-00</string>
    <string name="_00_00">00:00</string>
    <string name="dismiss">DISMISS</string>
    <string name="time_and_date">Time and Date</string>
    <string name="icon">icon</string>
    <string name="save">SAVE</string>
</resources>