<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:padding="10dp"
        android:background="@color/black">

        <Button
            android:id="@+id/dismiss_Button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/dismiss"
            app:backgroundTint="#F42626" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_baseline_notifications_none_24"
            android:layout_marginStart="-10dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/icon" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon"
            android:layout_toEndOf="@+id/icon">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/event_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/time_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message"
                android:layout_alignParentLeft="true"
                android:text="@string/time_and_date"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>