<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0E3D0"
        android:orientation="vertical"
        android:padding="16dp"
        android:backgroundTint="@color/Orange"
        android:id="@+id/item_display_card"
        >

        <TextView
            android:id="@+id/item_eventname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/elsie_swash_caps_black"
            android:text="@string/event_title"
            android:textColor="@color/Black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/item_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/elsie_swash_caps"
            android:text="@string/time"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/elsie_swash_caps"
            android:text="@string/date"
            android:textColor="@color/Black"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>